# amber-remix

./: .gitignore  Cargo.toml  FORMATS.org  README.md
docs/: FORMATS.org
src/: audio.rs  datafiles.rs  debug_audio.rs  lib.rs  main.rs  map_demo.rs  util.rs
src/audio/: acore.rs  amber.rs  blep.rs  dsp.rs  experiments.rs  iterator.rs  iterator_sequencer.rs  pcmplay.rs  queue.rs  samplesource.rs
src/audio/dsp/: channel_sequencer.rs  crossfade_linear.rs  frequency_range.rs  hermite.rs  linear.rs  mock_pcmwriter.rs  mock_syncwriter.rs  pcmfit.rs  pcmsync.rs  ringbuf.rs  stereo_mapper.rs  streamlog.rs  sync.rs  vtracker.rs  writer.rs
src/datafiles/: amber_string.rs  amberdev.rs  attr.rs  bytepattern.rs  chardata.rs  decode.rs  icons.rs  item.rs  labgfx.rs  map.rs  map_string_table.rs  mod.rs  music.rs  palette.rs  pictures.rs  pixmap.rs  sampledata.rs  string_fragment_table.rs  tile.rs
