[package]
name = "amber-remix"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codepage-strings = "1.0.2"
#sdl2 = "0.35.2"               # SDL2 bindings for Rust
#sdl2_ttf = "0.25.1"           # SDL2_ttf bindings for Rust
lazy_static = "1.4.0"
log = "0.4.17"
env_logger = "0.9.0"
rubato = "0.11.0"
atomic-option = "0.1.2"
rustyline = "9.1.2"
hound = "3.4.0"

[dependencies.sdl2]
version = "0.35.2"
features = ["ttf"]
