[package]
name = "amber_remix"
version = "0.1.2"
edition = "2021"

[dependencies]
codepage-strings = "1.0.2"
lazy_static = "1.4.0"
log = "0.4.17"
env_logger = "0.9.0"
atomic-option = "0.1.2"
rustyline = "9.1.2"
hound = "3.4.0"
rust-analyzer = "0.0.1"
rubato = "0.15.0"
rustfft = "6.2.0"
enumset = "1.1.5"

[dependencies.sdl2]
version = "0.37.0"
features = ["ttf"]
